
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package ILK_REGISTRY;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/ILK_REGISTRY";

message File0 {
	google.protobuf.Timestamp ts = 1;
	bytes Ilk = 2;		//	bytes32
	bytes What = 3;		//	bytes32
	bytes Data = 4;		//	address
}

message File1 {
	google.protobuf.Timestamp ts = 1;
	bytes Ilk = 2;		//	bytes32
	bytes What = 3;		//	bytes32
	bytes Data = 4;		//	uint256
}

message NameError {
	google.protobuf.Timestamp ts = 1;
	bytes Ilk = 2;		//	bytes32
}

message Rely {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message UpdateIlk {
	google.protobuf.Timestamp ts = 1;
	bytes Ilk = 2;		//	bytes32
}

message AddIlk {
	google.protobuf.Timestamp ts = 1;
	bytes Ilk = 2;		//	bytes32
}

message Deny {
	google.protobuf.Timestamp ts = 1;
	bytes Usr = 2;		//	address
}

message File {
	google.protobuf.Timestamp ts = 1;
	bytes What = 2;		//	bytes32
	bytes Data = 3;		//	address
}

message File2 {
	google.protobuf.Timestamp ts = 1;
	bytes Ilk = 2;		//	bytes32
	bytes What = 3;		//	bytes32
	string Data = 4;		//	string
}

message RemoveIlk {
	google.protobuf.Timestamp ts = 1;
	bytes Ilk = 2;		//	bytes32
}

message SymbolError {
	google.protobuf.Timestamp ts = 1;
	bytes Ilk = 2;		//	bytes32
}
